add rehype, decay, scheduled multicurve initializer support
